--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "@types/three": "^0.169.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.169.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.8"
